--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "scripts": {
-    "start": "node index.js"
-  },
-
   "name": "atividade-8",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
